
syntax = "proto3";
package medical_records;
option go_package = "CTG_monitor/proto/medical";

// Сервис для работы с медицинскими записями
service MedicalRecordsService {
  // Отправка завершенной сессии КТГ
  rpc SaveCTGSession(CTGSessionRequest) returns (SaveSessionResponse);
}

// Запрос для сохранения сессии КТГ
message CTGSessionRequest {
  string session_id = 1;      // UUID сессии
  string card_id = 2;         // UUID медицинской карты
  string device_id = 3;       // ID устройства
  int64 start_time = 4;       // Unix timestamp начала
  int64 end_time = 5;         // Unix timestamp окончания
  int32 duration_seconds = 6; // Продолжительность в секундах
  repeated CTGDataPoint fhr_data = 7;  // Данные FHR
  repeated CTGDataPoint uc_data = 8;   // Данные UC
  int32 total_fhr_points = 9;          // Общее количество FHR точек
  int32 total_uc_points = 10;          // Общее количество UC точек
}

// Точка данных КТГ
message CTGDataPoint {
  double time_sec = 1;   // Время в секундах от начала сессии
  double value = 2;      // Значение (FHR или UC)
}

// Ответ на сохранение сессии
message SaveSessionResponse {
  bool success = 1;        // Успешность операции
  string message = 2;      // Сообщение об ошибке/успехе
  string record_id = 3;    // ID созданной записи в медкартах
}